# SciOrch

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  mas_orchestra.code-workspace  pyproject.toml
LICENSES/: MIT-SGI-Bench.txt
configs/: mcts_reasoning.yaml  models.yaml  reasoning.yaml
configs/train_loop/: generate.yaml  loop.yaml  reasoning.yaml
maslab/: README.md  __init__.py  evaluation.py  inference.py
maslab/datasets/: README.md  loader.py
maslab/methods/: __init__.py  base.py  prompt_mas.py
maslab/methods/llm_debate/: __init__.py  llm_debate_main.py
maslab/methods/self_consistency/: __init__.py  self_consistency_main.py
maslab/utils/: README.md  __init__.py  calls.py  formatting.py  images.py
mcts/: __init__.py  config.py  instruction_similarity.py  prompts.py  runner.py
mcts/cli/: __init__.py  run_mcts_reasoning.py
sciorch/: __init__.py  config.py  model_list.py  types.py
sciorch/adapters/: __init__.py
sciorch/adapters/reasoning/: __init__.py  dataset.py  io.py  scorer.py
sciorch/baselines/: __init__.py  evaluation.py  prompt_mas.py
sciorch/cli/: run_reasoning.py
sciorch/core/: __init__.py  agent_base.py  main_agent.py  memory.py  parsing.py  subagent_reasoning.py
sciorch/core/tools/: __init__.py  delegate.py  submit.py
sciorch/llm/: __init__.py  model_capabilities.py  openai_compatible.py
sciorch/prompts/: __init__.py  main_reasoning.py  sub_reasoning.py
sciorch/runner/: __init__.py  reasoning_runner.py
scripts/: build_dataset.py  build_model_pools.py  expand_mcts.py  export_msswift.py  generate_mcts.py  prune_mcts.py  run_baseline.py  run_model_eval.py  summarize_mcts.py  train_loop.py
scripts/train/: lora.sh  lora_clip.sh
swift/arguments/: rlhf_args.py
swift/infer_engine/: utils.py
swift/model/: utils.py
swift/rewards/: orm.py
swift/rlhf_trainers/: arguments.py  offline_reinforce_trainer.py
swift/trainers/: mixin.py
